force-app/main/default/objects/sked_Travel_Time_Index_Item__c/fields/Override_Comment__c.field-meta.xml
<CustomField>
    <fullName>Override_Comment__c</fullName>
    <label>Override Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>