force-app/main/default/objects/sked_Travel_Time_Index_Item__c/fields/sked_Collection_Operation__c.field-meta.xml
<CustomField>
    <fullName>sked_Collection_Operation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Operation</label>
    <referenceTo>Biomed_Collection_Op_Center__c</referenceTo>
    <relationshipLabel>Travel Time Index Items</relationshipLabel>
    <relationshipName>sked_Travel_Time_Index_Items</relationshipName>
    <type>Lookup</type>
</CustomField>