force-app/main/default/objects/sked_Travel_Time_Index_Item__c/fields/sked_Collection_Operation_Id__c.field-meta.xml
<CustomField>
    <fullName>sked_Collection_Operation_Id__c</fullName>
    <label>Collection Operation Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>