force-app/main/default/objects/sked_Travel_Time_Index_Item__c/fields/sked_From_Key__c.field-meta.xml
<CustomField>
    <fullName>sked_From_Key__c</fullName>
    <formula>IF(ISBLANK(sked_Key__c), NULL, 
LEFT(sked_Key__c, FIND(&#39;:&#39;, sked_Key__c) - 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Key</label>
    <type>Text</type>
</CustomField>