force-app/main/default/objects/sked_Travel_Time_Index_Item__c/fields/sked_Is_Sync_Refresh_Required__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Sync_Refresh_Required__c</fullName>
    <formula>OR(
  ISNULL(sked_Collection_Operation__r.sked_Next_Travel_Time_Refresh_Date__c),
  DATEVALUE(sked_Last_Refresh_Date__c) &lt; sked_Collection_Operation__r.sked_Next_Travel_Time_Refresh_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Sync Refresh Required</label>
    <type>Checkbox</type>
</CustomField>