force-app/main/default/objects/sked_Travel_Time_Index_Item__c/fields/sked_Ordering_Key__c.field-meta.xml
<CustomField>
    <fullName>sked_Ordering_Key__c</fullName>
    <label>Ordering Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>