force-app/main/default/objects/sked_Travel_Time_Index_Item__c/fields/sked_To__c.field-meta.xml
<CustomField>
    <fullName>sked_To__c</fullName>
    <label>To</label>
    <required>true</required>
    <scale>6</scale>
    <type>Location</type>
</CustomField>