force-app/main/default/objects/sked_Travel_Time_Index_Item__c/fields/sked_Travel_Time_Breakdown_JSON_Backup__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Time_Breakdown_JSON_Backup__c</fullName>
    <label>Travel Time Breakdown JSON Backup</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>