force-app/main/default/objects/sked_Travel_Time_Index_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sked_Key__c</columns>
    <columns>sked_From__Latitude__s</columns>
    <columns>sked_From__Longitude__s</columns>
    <columns>sked_To__Latitude__s</columns>
    <columns>sked_To__Longitude__s</columns>
    <columns>sked_Travel_Distance__c</columns>
    <columns>sked_Average_Travel_Time__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>sked_Last_Refresh_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sked_Key__c</field>
        <operation>contains</operation>
        <value>34.337076 -84.911994</value>
    </filters>
    <label>All</label>
</ListView>