force-app/main/default/objects/sked_Travel_Time_Index_Item__c/listViews/Specific_Key.listView-meta.xml
<ListView>
    <fullName>Specific_Key</fullName>
    <columns>NAME</columns>
    <columns>sked_Key__c</columns>
    <columns>sked_From__Latitude__s</columns>
    <columns>sked_From__Longitude__s</columns>
    <columns>sked_To__Latitude__s</columns>
    <columns>sked_To__Longitude__s</columns>
    <columns>sked_Travel_Distance__c</columns>
    <columns>sked_Average_Travel_Time__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sked_Key__c</field>
        <operation>contains</operation>
        <value>34.154874 -118.32652</value>
    </filters>
    <label>Specific Key</label>
</ListView>